--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-paginate-v2
+  - jekyll-paginate
 
 permalink: "/:title/"
 
