--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: THE Produções
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Atualizações para FIFA 08.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://theproducoes.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
@@ -31,11 +29,11 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
 
-permalink: "/:title/"
+permalink: "/:year/:month/:title/"
 
 paginate: 6
 
-paginate_path: "/page:num/"
+paginate_path: "/page/:num/"
 
 ############################################################
 
