--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,23 +1,26 @@
-- name: Adicionado mais falas para lances de roubadas de bola na narração de Luís Roberto - Versão de Teste
-- name: Adicionado falas para momentos de cobranças de faltas na narração de Luís Roberto - Versão de Teste
-- name: Ajustes nas falas de chutes a gol na narração de Luís Roberto - Versão de Teste
-- name: Atualização de elencos para Real Madrid
-- name: Atualização de elencos para Barcelona
-- name: Atualização de elencos para Atlético de Madrid
-- name: Atualização de elencos para Arsenal
-- name: Atualização de elencos para Chelsea
-- name: Atualização de elencos para Manchester United
-- name: Atualização de elencos para Manchester City
-- name: Atualização de elencos para Tottenham
-- name: Atualização de elencos para Liverpool
-- name: Atualização de elencos para Everton
-- name: Atualização de elencos para Wolverhampton
-- name: Atualização de elencos para Watford
-- name: Atualização de elencos para West Ham
-- name: Atualização de elencos para Leicester City
-- name: Atualização de elencos para Milan
-- name: Atualização de elencos para Inter
-- name: Atualização de elencos para Roma
-- name: Atualização de elencos para Bayern Munich
-- name: Atualização de elencos para B. Dortmund
-- name: Atualização de elencos para Paris SG
+#- name: Adicionado falas para gols decisivos na narração de Luís Roberto - Versão de Teste
+#- name: Adicionado falas para quando um jogador marcar 2 ou mais gols na narração de Luís Roberto - Versão de Teste
+#- name: Capturas de áudio via streaming para narração de Luís Roberto - Versão de Teste
+#- name: Adicionado mais falas para lances de roubadas de bola na narração de Luís Roberto - Versão de Teste
+#- name: Adicionado falas para momentos de cobranças de faltas na narração de Luís Roberto - Versão de Teste
+#- name: Ajustes nas falas de chutes a gol na narração de Luís Roberto - Versão de Teste
+#- name: Atualização de elencos para Real Madrid
+#- name: Atualização de elencos para Barcelona
+#- name: Atualização de elencos para Atlético de Madrid
+#- name: Atualização de elencos para Arsenal
+#- name: Atualização de elencos para Chelsea
+#- name: Atualização de elencos para Manchester United
+#- name: Atualização de elencos para Manchester City
+#- name: Atualização de elencos para Tottenham
+#- name: Atualização de elencos para Liverpool
+#- name: Atualização de elencos para Everton
+#- name: Atualização de elencos para Wolverhampton
+#- name: Atualização de elencos para Watford
+#- name: Atualização de elencos para West Ham
+#- name: Atualização de elencos para Leicester City
+#- name: Atualização de elencos para Milan
+#- name: Atualização de elencos para Inter
+#- name: Atualização de elencos para Roma
+#- name: Atualização de elencos para Bayern Munich
+#- name: Atualização de elencos para B. Dortmund
+#- name: Atualização de elencos para Paris SG
