--- a/_data/musics.yaml
+++ b/_data/musics.yaml
@@ -80,7 +80,7 @@
   id: 2_wpOmM1d8w
   category: atualização 18.2
 - name: Calvin Harris featuring Ne-Yo - Let's Go
-  id: kdih7kjmQJw
+  id: LYZ6gXWZfZM
   category: atualização 18.2
 - name: Clean Bandit - Solo (feat. Demi Lovato)
   id: 8JnfIa84TnU
