--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,3 +1,4 @@
+#- name: Corrigido um erro que fazia os estádios ficarem com pouca torcida em alguns PC's
 #- name: Adicionado falas para gols decisivos na narração de Luís Roberto - Versão de Teste
 #- name: Adicionado falas para quando um jogador marcar 2 ou mais gols na narração de Luís Roberto - Versão de Teste
 #- name: Capturas de áudio via streaming para narração de Luís Roberto - Versão de Teste
