--- a/_data/musics.yaml
+++ b/_data/musics.yaml
@@ -1,3 +1,72 @@
+- name: ALLE FARBEN & ILIRA - FADING
+  id: cRy2qWpRJfc
+  category: atualização 20.0
+- name: Sultan & Ned Shepard & NERVO feat. Omarion - Army
+  id: XB7-MTzaLfo
+  category: atualização 20.0
+- name: Bring Me The Horizon - Drown
+  id: TkV5709EG5M
+  category: atualização 20.0
+- name: The Chainsmokers, Bebe Rexha - Call You Mine
+  id: 3XCVM3G3pns
+  category: atualização 20.0
+- name: Ellie Goulding, Juice WRLD - Hate Me
+  id: UZwi9SHgzGY
+  category: atualização 20.0
+- name: Henri PFR - Until The End ft. Raphaella
+  id: 5wJdcatC7bQ
+  category: atualização 20.0
+- name: Rise Against - Injection
+  id: PBI7gauE7ho
+  category: atualização 20.0
+- name: Karaja - She Moves
+  id: _PmXt7rq-HY
+  category: atualização 20.0
+- name: Meek Mill Ft. Nicki Minaj & Chris Brown - All Eyes On You
+  id: ut9ThAbfde0
+  category: atualização 20.0
+- name: FOALS - Mountain At My Gates
+  id: l_EIE5f2t6M
+  category: atualização 20.0
+- name: Nerv - Bad Habits
+  id: 8qM8zm-tBTs
+  category: atualização 20.0
+- name: Nicky Romero & Taio Cruz - Me On You
+  id: FSvcob8IXVE
+  category: atualização 20.0
+- name: Parade Of Lights - Feeling Electric
+  id: C_tnDY-_oxs
+  category: atualização 20.0
+- name: Kings Of Leon - Sex on Fire
+  id: RF0HhrwIwp0
+  category: atualização 20.0
+- name: P!nk - So What
+  id: FJfFZqTlWrQ
+  category: atualização 20.0
+- name: Soundgarden - Rusty Cage
+  id: pBZs_Py-1_0
+  category: atualização 20.0
+- name: The 1975 - Give Yourself A Try
+  id: zUzBfBqbSmc
+  category: atualização 20.0
+- name: The Naked And Famous - Young Blood
+  id: 0YuSg4mts9E
+  category: atualização 20.0
+- name: Calvin Harris - Thinking About You ft. Ayah Marar
+  id: cl3b7dDBLpo
+  category: atualização 20.0
+- name: Thousand Below - 171 xo
+  id: pU7b9UMAZDU
+  category: atualização 20.0
+- name: Tiësto, Jonas Blue & Rita Ora - Ritual
+  id: ontU9cOg354
+  category: atualização 20.0
+- name: Zara Larsson - All the Time
+  id: aMKtzB7zNrg
+  category: atualização 20.0
+- name: Zedd - Beautiful Now ft. Jon Bellion
+  id: n1a7o44WxNo
+  category: atualização 20.0
 - name: The Chainsmokers - Everybody Hates Me
   id: DKPCBAlDw2A
   category: atualização 19.0
@@ -115,8 +184,8 @@
 - name: Madeon feat. Ellie Goulding - Stay Awake
   id: fiYEG11UO2Q
   category: atualização 18.2
-- name: Frank Pierce & Drop Science ft. Stephanie Fellas - Highlife
-  id: 4f7zSIbVHRY
+- name: Frank Pierce & Drop Science - Highlife (ft Stephanie Fellas)
+  id: Kqg0FokI0mo
   category: atualização 18.2
 - name: O Maior Espetáculo da Terra - Tema da Band Copa 2014
   id: kwuvB-1HKWA
