--- a/_data/musics.yaml
+++ b/_data/musics.yaml
@@ -2,7 +2,7 @@
   id: cRy2qWpRJfc
   category: atualização 20.0
 - name: Sultan & Ned Shepard & NERVO feat. Omarion - Army
-  id: XB7-MTzaLfo
+  id: YBZrHxYQBO0
   category: atualização 20.0
 - name: Bring Me The Horizon - Drown
   id: TkV5709EG5M
@@ -134,7 +134,7 @@
   id: OWz3rQQaf_Q
   category: atualização 19.0
 - name: UEFA Champions League official theme song
-  id: 0Qqd6T_A9LY
+  id: ltcHzgUc944
   category: atualização 19.0
 - name: Alok & Mathieu Koss - Big Jet Plane
   id: DNWyr-R9aEY
